--- a/includes/style.css
+++ b/includes/style.css
@@ -847,7 +847,40 @@ footer{
     position: absolute;
     top: 22px;
 }
-
+#recipeAarticleStylePara{
+    position: absolute;
+    top: 17px;
+    right: 17px;
+    width: 495px;
+    direction: rtl;
+    font-family: ariel,Verdana,sans-serif;
+    font-size: 12.5px;
+    color: #87746a;
+}
+#bold{
+    font-weight: bold;
+}
+#orange{
+    color: #f26631;
+}
+#picRecipe{
+    width: 499px;
+    height: 142px;
+    position: absolute;
+    top: 73px;
+    right: 17px;
+}
+#picRecipe img:first-child{
+    margin-left: 5px;
+}
+#picRecipe img:last-child{
+    margin-right: 5px;
+}
+#picRecipe img{
+    float: right;
+    border: 2px solid #87746a;
+    border-radius: 5px;
+}
 
 /*********************************************************************************/
 #articleContentStyle1{
