--- a/includes/style.css
+++ b/includes/style.css
@@ -32,6 +32,12 @@ header,main,footer,aside,nav,article,section{
     width:960px;
     margin: 0 auto;
 }
+#recipesWrapper{
+    position: relative;
+    height: 675px;
+    width:960px;
+    margin: 0 auto;
+}
 /*header style*/
 header{
     background-color: #ffffff;
@@ -162,41 +168,6 @@ main{
 #slideshow{
     position: absolute;
     top: 45px;
-    height: 269px;
-    width: 531px;
-    border: 2px solid #87746a;
-    border-radius: 5px;
-}
-#slideshowinner{
-	height: 265px;
-    width: 527px;
-    border: 2px solid #ffffff;
-    border-radius: 5px;
-   
-
-}
-#slideshowtext{
-	width:186px;
-	background-color:#87746A;
-	direction:rtl;
-	float:left;
-}
-#h1slideshow{
-		font-family: ariel,Verdana,sans-serif;
-    	color: #ffffff;
-    	font-size:19px;
-		padding:17px 21px 0 21px;		
-	}
-#slideshowtext>p{
-		font-family: ariel,Verdana,sans-serif;
-    	color: #ffffff;
-    	font-size:12px;	
-		padding:16px 21px 21px 20px;	
-
-}
-#slideshowimg{
-	width:341px;
-	 float:left;
 }
 
 #bigArticle{
@@ -414,16 +385,64 @@ aside{
     color:#87746a;
     text-decoration: none;
 }
-#asideNavTop> ul{
+#asideNavTop > ul{
     list-style-type: none;
     padding-top: 3px;
 }
 
-#asideNavTop ul li {
+#asideNavTop > ul > li {
     padding-top: 5px;
     padding-right: 12px;
-
 }
+/******         Recipe Page aside style     ******/
+#recipeAside{
+    position: absolute;
+    left: 689px;
+    top: 108px;
+    width: 160px;
+    height: 435px;
+    border-top: 1px dotted #c3b9b4;
+    padding-left: 3px;
+    padding-right: 6px;
+    margin-left: 1px;
+}
+#asideNavTopContentRecipe{
+    direction: rtl;
+    font-family: ariel,Verdana,sans-serif;
+    color: #87746a;
+    font-size: 13px;
+    height: 169px;
+    margin-right: 10px;
+    border-top: 2px solid #87746a;
+}
+#asideNavTopContentRecipe a:link, #asideNavTopContentRecipe a:visited{
+    color:#87746a;
+    text-decoration: none;
+}
+
+#asideNavTopContentRecipe >ul{
+    list-style-type: none;
+    padding-top: 3px;
+}
+#asideNavTopContentRecipe > ul > li{
+    padding-top: 5px;
+    padding-right: 12px;
+}
+
+#ulLastChild{
+    list-style-type: none !important;
+    padding-top: 11px !important;
+}
+#ulLastChild li{
+    padding-top: 3px !important;
+    padding-bottom: 4px !important;
+    border-top: 1px dotted #c3b9b4 !important;
+}
+
+
+
+
+/***************************************************************/
 
 
 #asideNavTopContent >ul{
@@ -617,15 +636,13 @@ footer{
     padding-left: 30px;
 }
 #contentFooter{
-    position: absolute;
     top: 646px;
 }
-#contentfooterVaccum{
-    position: absolute;
-    top: 754px;
+
+#contentfooterRecipes{
+    top: 603px;
 }
-#contentfooter{
-    position: absolute;
+#contentfooterVaccum{
     top: 754px;
 }
 #footerSection{
@@ -849,7 +866,7 @@ footer{
 }
 #recipeAarticleStylePara{
     position: absolute;
-    top: 17px;
+    top: 16px;
     right: 17px;
     width: 495px;
     direction: rtl;
@@ -860,8 +877,8 @@ footer{
 #bold{
     font-weight: bold;
 }
-#orange{
-    color: #f26631;
+.orange{
+    color: #f26631 !important;
 }
 #picRecipe{
     width: 499px;
@@ -880,6 +897,25 @@ footer{
     float: right;
     border: 2px solid #87746a;
     border-radius: 5px;
+}
+#h3recipetitle{
+    position: absolute;
+    top:213px;
+    right: 16px;
+    width: 499px;
+    height: 19px;
+}
+.h3RecipeTitle{
+    width: 162px;
+    height: 19px;
+    direction: rtl;
+    font-family: ariel,Verdana,sans-serif;
+    font-size: 14.5px;
+    color: #87746a;
+    float: right;
+    text-align: center;
+    font-weight: normal;
+    margin-top: 5px;
 }
 
 /*********************************************************************************/
