--- a/includes/style.css
+++ b/includes/style.css
@@ -38,6 +38,12 @@ header,main,footer,aside,nav,article,section{
     width:960px;
     margin: 0 auto;
 }
+#vodkaWatermellonWrapper{
+    position: relative;
+    height: 1257px;
+    width:960px;
+    margin: 0 auto;
+}
 /*header style*/
 header{
     background-color: #ffffff;
@@ -120,7 +126,7 @@ header{
     margin-top: 3px;
 }
 /** Vaccum Page **/
-#brownArrowImg{
+.brownArrowImg{
     margin-top: 3px;
 }
 
@@ -316,8 +322,181 @@ main{
     top: 561px;
     border-bottom: 2px solid #e7e3e1;
 }
+#asideNavTopContent >ul{
+    list-style-type: none;
+    padding-top: 3px;
+}
+#asideNavTopContent > ul > li{
+    padding-top: 5px;
+    padding-right: 12px;
+}
 
+#greenFontTitle{
+    font-size: 14px;
+    font-weight: bold;
+    border-bottom: 1px dotted #e1dcda;
+    color: #00b25a;
+    padding-bottom: 6px;
+}
+#asideNavCenter1{
+    direction: rtl;
+    font-family: ariel,Verdana,sans-serif;
+    color: #87746a;
+    margin-right: 10px;
+    font-size: 13px;
+}
+#asideNavCenter1> ul {
+    margin-right: 17px;
+}
+#asideNavCenter1> ul >li{
+    padding-top: 5px;
+    margin-left: 1px;
+    list-style-type: none;
+    padding-bottom:5px;
+    width: 114px;
+    border-bottom: 1px solid #d2cbc7;
+    /*padding-right: 10px;
+    content: "• ";
+    color: #f26631;*/
+}
+#currentArticleGreen{
+    color: #00b25a;
+    font-weight: bold;
+}
+#asideNavCenter{
+    direction: rtl;
+    font-family: ariel,Verdana,sans-serif;
+    color: #87746a;
+    margin-right: 10px;
+    font-size: 13px;
+    height: 108px;
+    border-top: 2px solid #87746a;
 
+}
+#asideNavCenter a:link,#asideNavCenter a:visited{
+    color:#87746a;
+    text-decoration: none;
+}
+#asideNavCenter ul {
+    list-style-type: none;
+}
+#asideNavCenterTitle{
+    font-size: 16px;
+    font-weight: bold;
+}
+#asideNavCenter ul li{
+    padding-top: 5px;
+}
+.asideNavCentedot:before {
+    content: "• ";
+    color:#87746a;
+}
+.asideNavCentedot1:before {
+    content: "• ";
+    color:#87746a;
+    margin-right: -15px;
+}
+#asideNavCenter ul {
+    margin-right: 12px;
+    margin-top: 5px;
+}
+#asideNavBottom{
+    direction: rtl;
+    font-family: ariel,Verdana,sans-serif;
+    color: #f3f1f0;
+    margin-right: 10px;
+    font-size: 13px;
+    height: 117px;
+    border-top: 2px solid #87746a;
+}
+#asideNavBottom a:link,#asideNavBottom a:visited{
+    color:#f3f1f0;
+    text-decoration: none;
+}
+#asideNavBottom ul{
+    margin-top: 15px;
+}
+#asideNavBottom1,#asideNavBottom2,#asideNavBottom3{
+    list-style-type: none;
+    background-color: #87746a;
+    margin-top: 8px;
+    border: 0px;
+    border-radius: 25px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+
+#asideNavBottom1:before{
+    padding-right: 10px;
+    content: "• ";
+    color: #42ca44;
+}
+#asideNavBottom2:before{
+    padding-right: 10px;
+    content: "• ";
+    color: #f26631;
+}
+#asideNavBottom3:before{
+    padding-right: 10px;
+    content: "• ";
+    color: #ffc848;
+}
+
+#asideContact{
+    direction: rtl;
+    height: 974px;
+    margin-right: 10px;
+    border-top: 2px solid #87746a;
+    font-family: ariel,Verdana,sans-serif;
+    color: #87746a;
+
+}
+#asideContact p{
+    margin-top: 17px;
+    padding-right: 10px;
+    font-size: 12px;
+}
+.ContactForm{
+    direction: rtl;
+    height: 21px;
+    font-family: ariel,Verdana,sans-serif;
+    color: #87746a;
+    font-size: 13px;
+    background-color: #edeae9;
+    border: 0px;
+    margin-top: 2px;
+}
+#email{
+    width: 150px;
+}
+#name{
+    width: 107px;
+    margin-left: 2px;
+}
+#submit{
+    width: 41px;
+    margin-right: -6px;
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #87746a;
+}
+#asideEnd{
+    height: 76px;
+    border-top: 2px solid #87746a;
+}
+#asideEnd{
+    height: 76px;
+    border-top: 2px solid #87746a;
+}
+#asideEnd p{
+    direction: rtl;
+    margin-top: 11px;
+    font-size: 13px;
+    font-family: ariel,Verdana,sans-serif;
+    font-weight: bold;
+    color: #87746a;
+    text-align: center;
+}
 /*-------------------------------------------*/
 
 
@@ -439,188 +618,54 @@ aside{
     border-top: 1px dotted #c3b9b4 !important;
 }
 
-
-
-
 /***************************************************************/
 
+/******         Vodak Watermellon Page aside style     ******/
 
-#asideNavTopContent >ul{
+#vodkaWatermellonaside{
+    position: absolute;
+    left: 689px;
+    top: 108px;
+    width: 160px;
+    height: 626px;
+    border-top: 1px dotted #c3b9b4;
+    padding-left: 3px;
+    padding-right: 6px;
+    margin-left: 1px;
+}
+#asideNavTopContentvodkaWatermellon{
+    direction: rtl;
+    font-family: ariel,Verdana,sans-serif;
+    color: #87746a;
+    font-size: 13px;
+    height: 361px;
+    margin-right: 10px;
+    border-top: 2px solid #87746a;
+}
+#asideNavTopContentvodkaWatermellon a:link, #asideNavTopContentvodkaWatermellon a:visited{
+    color:#87746a;
+    text-decoration: none;
+}
+#asideNavTopContentvodkaWatermellon >ul{
     list-style-type: none;
     padding-top: 3px;
 }
-#asideNavTopContent > ul > li{
+#asideNavTopContentvodkaWatermellon > ul > li{
     padding-top: 5px;
     padding-right: 12px;
 }
-
-#greenFontTitle{
-    font-size: 14px;
-    font-weight: bold;
-    border-bottom: 1px dotted #e1dcda;
-    color: #00b25a;
-    padding-bottom: 6px;
-}
-#asideNavCenter1{
-    direction: rtl;
-    font-family: ariel,Verdana,sans-serif;
-    color: #87746a;
-    margin-right: 10px;
-    font-size: 13px;
-}
-#asideNavCenter1> ul {
-    margin-right: 17px;
-}
-#asideNavCenter1> ul >li{
-    padding-top: 5px;
-    padding-bottom:5px;
-    width: 114px;
-    border-bottom: 1px solid #d2cbc7;
-}
-#currentArticleGreen{
-    color: #00b25a;
-    font-weight: bold;
-}
-
-
-#asideNavCenter{
-    direction: rtl;
-    font-family: ariel,Verdana,sans-serif;
-    color: #87746a;
-    margin-right: 10px;
-    font-size: 13px;
-    height: 108px;
-    border-top: 2px solid #87746a;
-
-}
-#asideNavCenter a:link,#asideNavCenter a:visited{
-    color:#87746a;
-    text-decoration: none;
-}
-#asideNavCenter ul {
+#ulLastChild > ul{
+    height: 190px;
     list-style-type: none;
 }
-#asideNavCenterTitle{
-    font-size: 16px;
-    font-weight: bold;
-}
-#asideNavCenter ul li{
-    padding-top: 5px;
-}
-.asideNavCentedot:before {
-    content: "• ";
-    color:#87746a;
-}
-.asideNavCentedot1:before {
-    content: "• ";
-    color:#87746a;
-    margin-right: -15px;
-}
-#asideNavCenter ul {
-    margin-right: 12px;
-    margin-top: 5px;
-}
-
-
-
-#asideNavBottom{
-    direction: rtl;
-    font-family: ariel,Verdana,sans-serif;
-    color: #f3f1f0;
+#ulLastChild > ul > li{
     margin-right: 10px;
-    font-size: 13px;
-    height: 117px;
-    border-top: 2px solid #87746a;
 }
-#asideNavBottom a:link,#asideNavBottom a:visited{
-    color:#f3f1f0;
-    text-decoration: none;
-}
-#asideNavBottom ul{
-    margin-top: 15px;
-}
-#asideNavBottom1,#asideNavBottom2,#asideNavBottom3{
-    list-style-type: none;
-    background-color: #87746a;
-    margin-top: 8px;
-    border: 0px;
-    border-radius: 25px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-}
-
-#asideNavBottom1:before{
-    padding-right: 10px;
+#ulLastChild > ul > li:before{
+    padding-right: 3px;
     content: "• ";
-    color: #42ca44;
-}
-#asideNavBottom2:before{
-    padding-right: 10px;
-    content: "• ";
-    color: #f26631;
-}
-#asideNavBottom3:before{
-    padding-right: 10px;
-    content: "• ";
-    color: #ffc848;
-}
-
-#asideContact{
-    direction: rtl;
-    height: 974px;
-    margin-right: 10px;
-    border-top: 2px solid #87746a;
-    font-family: ariel,Verdana,sans-serif;
     color: #87746a;
-
 }
-#asideContact p{
-    margin-top: 17px;
-    padding-right: 10px;
-    font-size: 12px;
-}
-.ContactForm{
-    direction: rtl;
-    height: 21px;
-    font-family: ariel,Verdana,sans-serif;
-    color: #87746a;
-    font-size: 13px;
-    background-color: #edeae9;
-    border: 0px;
-    margin-top: 2px;
-}
-#email{
-    width: 150px;
-}
-#name{
-    width: 107px;
-    margin-left: 2px;
-}
-#submit{
-    width: 41px;
-    margin-right: -6px;
-    font-weight: bold;
-    color: #ffffff;
-    background-color: #87746a;
-}
-#asideEnd{
-    height: 76px;
-    border-top: 2px solid #87746a;
-}
-#asideEnd{
-    height: 76px;
-    border-top: 2px solid #87746a;
-}
-#asideEnd p{
-    direction: rtl;
-    margin-top: 11px;
-    font-size: 13px;
-    font-family: ariel,Verdana,sans-serif;
-    font-weight: bold;
-    color: #87746a;
-    text-align: center;
-}
-
 /*-------------------------------------------*/
 
 
@@ -644,6 +689,9 @@ footer{
 }
 #contentfooterVaccum{
     top: 754px;
+}
+#contentfooterVodkaWatermellon{
+    top: 1185px;
 }
 #footerSection{
     position:relative;
@@ -711,6 +759,7 @@ footer{
     position: absolute;
     top: 29px;
     right: 30px;
+    width: 544px;
     border-top: 2px solid #87746a;
 
 }
@@ -854,13 +903,13 @@ footer{
 
 /*****      Recipes Page    ********/
 
-#orangeRecipesLogo{
+.orangeRecipesLogo{
     color: #f26631 !important;
 }
 
 #recipeAarticleStyle{
     width: 544px;
-    height: 430px;
+    height: 403px;
     position: absolute;
     top: 22px;
 }
@@ -879,6 +928,7 @@ footer{
 }
 .orange{
     color: #f26631 !important;
+    text-decoration: none;
 }
 #picRecipe{
     width: 499px;
@@ -916,6 +966,161 @@ footer{
     text-align: center;
     font-weight: normal;
     margin-top: 5px;
+}
+
+/*********************************************************************************/
+
+/*****      Vodka Watermellon Page    ********/
+
+#vodkaWMAarticleStyle{
+    width: 544px;
+    height: 985px;
+    position: absolute;
+    top: 22px;
+}
+#vodkaWMAarticleStyle h1{
+    position: absolute;
+    top: 8px;
+    right: 15px;
+    color: #f26631;
+    direction: rtl;
+    font-size: 19px;
+    font-weight: bold;
+    font-family: ariel,Verdana,sans-serif;
+}
+#vodkaWatermellonImg{
+    position: absolute;
+    top: 45px;
+    right: 2px;
+    margin-left: 20px;
+    margin-right: 13px;
+    border: 2px solid #87746a;
+    border-radius: 5px;
+}
+#vodkaWMAarticleStylePara{
+    position: absolute;
+    top: 207px;
+    right: 15px;
+    width: 516px;
+    color: #87746a;
+    direction: rtl;
+    font-size: 13px;
+    font-weight: bold;
+    font-family: ariel,Verdana,sans-serif;
+}
+#vodkaWMAarticleStyleRecipes{
+    position: absolute;
+    top: 260px;
+    right: 15px;
+    width: 200px;
+}
+#vodkaWMAarticleStyleRecipes p{
+    color: #87746a;
+    direction: rtl;
+    font-size: 13px;
+    font-family: ariel,Verdana,sans-serif;
+    padding-top: 2px;
+}
+#vodkaWMAarticleStyleRecipes p:first-child{
+    font-weight: bold;
+}
+
+#vodkaWMAarticleStylePreparation{
+    position: absolute;
+    top: 388px;
+    right: 15px;
+    width: 420px;
+}
+#vodkaWMAarticleStylePreparation p{
+    color: #87746a;
+    direction: rtl;
+    font-size: 13px;
+    font-family: ariel,Verdana,sans-serif;
+    padding-top: 2px;
+}
+#vodkaWMAarticleStylePreparation p:first-child{
+    font-weight: bold;
+}
+
+#picsSlider{
+    position: absolute;
+    top: 495px;
+    right: -12px;
+    width: 550px;
+    height: 405px;
+    border-bottom: 2px solid #e7e3e1;
+}
+#picsSlider ul{
+    position: absolute;
+    right: 17px;
+    height: 20px;
+    width: 496px;
+    list-style-type: none;
+}
+#picsSlider ul li{
+    float: right;
+    direction: rtl;
+    color: #87746a;
+    font-size: 13px;
+    font-family: ariel,Verdana,sans-serif;
+    margin-left: 16px;
+}
+#picsSlider ul li:first-child{
+    font-weight: bold;
+}
+#picsSliderBigImg{
+    position: absolute;
+    top: 20px;
+    right: 17px;
+}
+#picsSlider p{
+    position: absolute;
+    top: 344px;
+    right: 17px;
+    direction: rtl;
+    color: #ab9d96;
+    font-size: 13px;
+    font-family: ariel,Verdana,sans-serif;
+}
+#sendRecipes{
+    position: absolute;
+    top: 924px;
+    left: 6px;
+    width: 550px;
+    height: 83px;
+}
+#sendRecipes p{
+    width: 95px;
+    height: 18px;
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    direction: rtl;
+    font-size: 12px;
+    font-family: ariel,Verdana,sans-serif;
+    color: #ffffff;
+    background-color: #f26631;
+    border-radius: 10px;
+    text-align: center;
+}
+#sendRecipes ul{
+    position: absolute;
+    left: 10px;
+    top: 16px;
+    height: 18px;
+    width: 167px;
+    list-style-type: none;
+}
+#sendRecipes ul li{
+    float: right;
+    direction: rtl;
+    color: #87746a;
+    font-size: 12px;
+    font-family: ariel,Verdana,sans-serif;
+    margin-left: 17px;
+}
+#sendRecipes ul img{
+    float: right;
 }
 
 /*********************************************************************************/
