--- a/includes/style.css
+++ b/includes/style.css
@@ -459,7 +459,6 @@ main{
 }
 .currentArticleGreen a:link,.currentArticleGreen a:visited {
     color: #00b25a !important;
-    font-weight: bold;
 }
 #asideNavCenter{
     direction: rtl;
@@ -487,6 +486,9 @@ main{
 }
 #asideNavCenter ul li{
     padding-top: 5px;
+}
+#asideNavCenterHover a:hover{
+    color: #f26631 ;
 }
 .asideNavCentedot:before {
     content: "• ";
@@ -709,6 +711,9 @@ aside{
     color:#87746a;
     text-decoration: none;
 }
+#asideNavTopContentRecipe a:hover{
+    color: #f26631;
+}
 
 #asideNavTopContentRecipe >ul{
     list-style-type: none;
@@ -722,6 +727,13 @@ aside{
 #ulLastChild{
     list-style-type: none !important;
     padding-top: 11px !important;
+}
+#ulLastChild a:link, #ulLastChild a:visited{
+    color:#87746a;
+    text-decoration: none;
+}
+#ulLastChild a:hover{
+    color: #f26631;
 }
 #ulLastChild li{
     padding-top: 3px !important;
@@ -757,6 +769,9 @@ aside{
     color:#87746a;
     text-decoration: none;
 }
+#asideNavTopContentvodkaWatermellon a:hover{
+    color: #f26631;
+}
 #asideNavTopContentvodkaWatermellon >ul{
     list-style-type: none;
     padding-top: 3px;
@@ -764,6 +779,13 @@ aside{
 #asideNavTopContentvodkaWatermellon > ul > li{
     padding-top: 5px;
     padding-right: 12px;
+}
+#ulLastChild a:link, #ulLastChild a:visited{
+    color:#87746a;
+    text-decoration: none;
+}
+#ulLastChild a:hover{
+    color: #f26631;
 }
 #ulLastChild > ul{
     height: 190px;
@@ -776,6 +798,16 @@ aside{
     padding-right: 3px;
     content: "• ";
     color: #87746a;
+}
+#ulInnerRecipesTermo a:link, #ulInnerRecipesTermo a:visited{
+    color:#87746a;
+    text-decoration: none;
+}
+#ulInnerRecipesTermo a:hover{
+    color: #f26631;
+}
+#asideNavCenterVMHover a:hover{
+    color: #f26631;
 }
 /*-------------------------------------------*/
 /*****          FienCook aside style            *****/
@@ -957,6 +989,9 @@ aside{
 .orangeRecipesLogo{
     color: #f26631 !important;
 }
+#topNavRecipeHover a:hover{
+    color: #f26631;
+}
 
 #recipeAarticleStyle{
     width: 544px;
@@ -982,14 +1017,14 @@ aside{
     text-decoration: none;
 }
 #picRecipe{
-    width: 499px;
+    width: 512px;
     height: 142px;
     position: absolute;
     top: 73px;
-    right: 17px;
+    right: 12px;
 }
 #picRecipe img:first-child{
-    margin-left: 5px;
+    margin-left: 3px;
 }
 #picRecipe img:last-child{
     margin-right: 5px;
@@ -1021,7 +1056,9 @@ aside{
 
 /*********************************************************************************/
 /*****      Fien Cook Page    ********/
-
+#greenBoldFienCook{
+    color: #1fb25a !important;
+}
 #fiencookArticle{
     position: absolute;
     top: 29px;
@@ -1112,6 +1149,9 @@ aside{
 /*********************************************************************************/
 
 /******         Conatct Form Page style     ******/
+#topNavCFormHover a:hover{
+    color: #ffae3b;
+}
 #conatactFormAarticleStyle{
     position: absolute;
     top: 29px;
@@ -1201,10 +1241,21 @@ aside{
     margin-left: 1px;
 
 }
+#asideNavTopCFormHover a:hover{
+    color: #ffae3b;
+}
+#asideNavCenterCFormHover a:hover{
+    color: #ffae3b ;
+}
 
 /*********************************************************************************/
 /*****      Vodka Watermellon Page    ********/
-
+#topNavVWHover a:hover{
+    color: #f26631;
+}
+#mainNavVMHover a:hover{
+    color: #f26631;
+}
 #vodkaWMAarticleStyle{
     width: 544px;
     height: 985px;
@@ -1322,6 +1373,13 @@ aside{
     width: 550px;
     height: 83px;
 }
+#sendRecipes a:link, #sendRecipes a:visited{
+    color:#87746a;
+    text-decoration: none;
+}
+#sendRecipes a:hover{
+    color: #f26631;
+}
 #sendRecipes p{
     width: 95px;
     height: 18px;
@@ -1338,7 +1396,7 @@ aside{
 }
 #sendRecipes ul{
     position: absolute;
-    left: 10px;
+    left: 33px;
     top: 16px;
     height: 18px;
     width: 167px;
@@ -1350,10 +1408,17 @@ aside{
     color: #87746a;
     font-size: 12px;
     font-family: ariel,Verdana,sans-serif;
-    margin-left: 17px;
+    margin-left: 21px;
+}
+#sendRecipesUlLiLastChild{
+    margin-left: 3px !important;
 }
 #sendRecipes ul img{
     float: right;
+    margin-left: 3px;
+}
+#sendRecipesUlLiFirstChild{
+    margin-top: 2px !important;
 }
 
 /*********************************************************************************/
@@ -1495,6 +1560,9 @@ footer{
     height:17px;
     border-left: 1px solid #43332c
 }
+#footerSharing a:link, #footerSharing a:visited{
+    text-decoration: none;
+}
 .footerSharingImg{
     padding-right:3px;
 }
@@ -1511,18 +1579,18 @@ footer{
 }
 
 #footerNav{
-
     height:35px;
     font-family: ariel,Verdana,sans-serif;
     color: #ffffff;
     font-size: 13px;
     margin-left: 180px;
-
 }
-
 #footerNav a:link,#footerNav a:visited{
     color:#ffffff;
     text-decoration: none;
+}
+#footerNav a:hover{
+    color:#473a33;
 }
 #footerNav ul{
     list-style-type: none;
