--- a/includes/style.css
+++ b/includes/style.css
@@ -903,26 +903,13 @@ aside{
     top: 162px;
 }
 .vaccumAarticleStyleParaSection > p{
-    position: absolute;
-    right: 1px;
-    width: 485px;
     direction: rtl;
+    width: 485px;
+    margin-top: 17px;
+    margin-left: 43px;
     font-family: ariel,Verdana,sans-serif;
     font-size: 12.5px;
     color: #87746a;
-}
-#vaccumAarticleStyleParaFixedPos1{
-    top: 43px;
-}
-#vaccumAarticleStyleParaFixedPos2{
-    top: 99px;
-}
-#vaccumAarticleStyleParaFixedPos3{
-    top: 157px;
-}
-#vaccumAarticleStyleParaFixedPos4{
-    top: 201px;
-    width: 501px !important;
 }
 #vaccumAarticleStyleNextBeforeArticle{
     width: 544px;
