--- a/includes/style.css
+++ b/includes/style.css
@@ -640,12 +640,8 @@ ul.triggers li {
     padding:10px;
 
 }ul.triggers li.selected {
-     float:left;
-     margin:0 5px;
-     font: bold 28px arial;
-     cursor:pointer;
-     color:#ccc;
-     padding:10px;
+     background-color:red;
+     color:#000;
  }
 /*-------------------------------------------*/
 
