--- a/includes/style.css
+++ b/includes/style.css
@@ -640,11 +640,11 @@ ul.triggers li {
     margin:0 5px;
     font: bold 28px arial;
     cursor:pointer;
-    color:#ccc;
+    color:#DBDBDB;
     padding:10px;
 
 }ul.triggers li.selected {
-     color:#000;
+     color:#C7C7C7;
  }
 /*-------------------------------------------*/
 
