--- a/includes/style.css
+++ b/includes/style.css
@@ -644,7 +644,7 @@ ul.triggers li {
     padding:10px;
 
 }ul.triggers li.selected {
-     color:#C7C7C7;
+     color:#9E9E9E;
  }
 /*-------------------------------------------*/
 
