--- a/includes/style.css
+++ b/includes/style.css
@@ -403,6 +403,7 @@ main{
     font-size:14px;
     color:#f26631;
     padding-top:2px;
+    margin-right: 16px;
     text-align: center;
 }
 #endContent{
