--- a/includes/style.css
+++ b/includes/style.css
@@ -886,16 +886,16 @@ aside{
 /*******        Vaccum article style         *******/
 #vaccumAarticleStyle{
     width: 544px;
-    height: 485px;
+    height: 554px;
+    direction: rtl;
     position: absolute;
     top: 22px;
-    border-bottom: 2px solid #e7e3e1;
+    padding-right: 15px;
+
 }
 #vaccumAarticleStyle h2{
-    position: absolute;
-    right: 15px;
-    top: 15px;
-    direction: rtl;
+    margin-top: 15px;
+    margin-right: 15px;
     font-family: ariel,Verdana,sans-serif;
     font-weight: bold;
     font-size: 19px;
@@ -903,57 +903,31 @@ aside{
 
 }
 #vaccumAarticleStyleH4{
-    position: absolute;
-    right: 16px;
     margin-top: 5px;
-    direction: rtl;
+    margin-right: 15px;
     font-family: ariel,Verdana,sans-serif;
     color: #1fb25a;
-    top: 32px;
     font-size: 10px;
     font-weight: normal;
 }
 #vaccumAarticleStyleParaBold{
-    position: absolute;
-    right: 15px;
-    top: 57px;
-    width: 480px;
-    direction: rtl;
-    font-family: ariel,Verdana,sans-serif;
-    font-size: 12.5px;
     font-weight: bold;
-    color: #87746a;
 }
-#vaccumAarticleStyleParaNotBoldFix{
-    position: absolute;
-    right: 15px;
-    top: 113px;
+#vaccumAarticleStyle p{
+    margin-top: 10px;
+    margin-right: 15px;
     width: 480px;
     direction: rtl;
-    font-family: ariel,Verdana,sans-serif;
-    font-size: 12.5px;
-    color: #87746a;
-}
-.vaccumAarticleStyleParaSection{
-    position: absolute;
-    width: 530px;
-    height: 410px;
-    top: 145px;
-}
-.vaccumAarticleStyleParaSection > p{
-    direction: rtl;
-    width: 485px;
-    margin-top: 17px;
-    margin-left: 43px;
     font-family: ariel,Verdana,sans-serif;
     font-size: 12.5px;
     color: #87746a;
 }
 #vaccumAarticleStyleNextBeforeArticle{
     position: relative;
-    top:45px;
+    top:20px;
     width: 544px;
     height: 50px;
+    border-top: 2px solid #e7e3e1;
 }
 #vaccumAarticleStyleNextBeforeArticleBefore{
     position: absolute;
