--- a/includes/style.css
+++ b/includes/style.css
@@ -824,7 +824,7 @@ aside{
     color: #f26631;
 }
 #ulLastChild > ul{
-    height: 190px;
+    margin-bottom: 10px;
     list-style-type: none;
 }
 #ulLastChild > ul > li{
