--- a/includes/style.css
+++ b/includes/style.css
@@ -14,7 +14,81 @@ header,main,footer,aside,nav,article,section{
     display: block;
 }
 @media only screen and(max-width: 480px) {
-    
+
+    body{
+        font-family: ariel, Verdana, sans-serif;
+        font-size: 12px;
+    }
+    /* main width -        width: 960px; */
+    /*****          Wrappers            *****/
+    #wrapper {
+        position: relative;
+        height: 1719px;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    #contentWrapper {
+        position: relative;
+        height: 718px;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    #vaccumWrapper {
+        position: relative;
+        height: 827px;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    #recipesWrapper {
+        position: relative;
+        height: 675px;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .recipesWrapper {
+        position: relative;
+        height: 1257px;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    #fiencookWrapper {
+        position: relative;
+        height: 1013px;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    #contactFormWrapper {
+        position: relative;
+        height: 718px;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    /*******************************************************************/
+    /*header style*/
+    header {
+        background-color: #ffffff;
+        width: 100%;
+        height: 107px;
+
+    }
+
+    #logo {
+        width: 24.375%;
+        height: 24.375%;
+        position: absolute;
+        left: 12.083%;
+        background-image: url("../images/logo.png");
+    }
+
+    /*-------------------------------------------*/
+
 }
 @media only screen and (min-width: 481px)
 {
