--- a/includes/style.css
+++ b/includes/style.css
@@ -13,7 +13,7 @@
 header,main,footer,aside,nav,article,section{
     display: block;
 }
-@media only screen and (max-width: 640px) {
+@media (max-width: 640px) {
 
     body{
         font-family: ariel, Verdana, sans-serif;
@@ -92,7 +92,7 @@ header,main,footer,aside,nav,article,section{
     /*-------------------------------------------*/
 
 }
-@media only screen and (min-width: 641px)
+@media (min-width: 641px)
 {
 
     /*****          Wrappers            *****/
