--- a/includes/style.css
+++ b/includes/style.css
@@ -83,10 +83,11 @@ header,main,footer,aside,nav,article,section{
 
     #logo {
         width: 24.375%;
-        height: 24.375%;
+        height: 11.14584%;
         position: absolute;
         left: 12.083%;
         background-image: url("../images/logo.png");
+        background-repeat: no-repeat;
     }
 
     /*-------------------------------------------*/
