--- a/includes/style.css
+++ b/includes/style.css
@@ -129,7 +129,9 @@ header,main,footer,aside,nav,article,section{
         color: #ffae3b !important;
     }
 
-
+#tickerText{
+    display: none;
+}
 
 /*****  Footer Style    *****/
 
