--- a/includes/style.css
+++ b/includes/style.css
@@ -133,6 +133,55 @@ header,main,footer,aside,nav,article,section{
     display: none;
 }
 
+
+    /*Main Page Slide Photo*/
+    .mask {
+        float: left;
+        width: 341px;
+        height: 265px;
+        overflow: hidden;
+    }
+
+    .images img {
+        width: 341px;
+    }
+
+    ul.images {
+        list-style-type: none;
+        position: relative;
+        top: 0px;
+        left: 0px;
+    }
+
+    ul.images li {
+        float: left;
+    }
+
+    ul.triggers {
+        position: absolute;
+        top: 225px;
+        left: 80px;
+        list-style-type: none;
+    }
+
+    ul.triggers li {
+
+        float: left;
+        margin: 0 5px;
+        font: bold 28px arial;
+        cursor: pointer;
+        color: #DBDBDB;
+        padding: 10px;
+
+    }
+
+    ul.triggers li.selected {
+        color: #9E9E9E;
+    }
+
+    /*-------------------------------------------*/
+
+
 /*****  Footer Style    *****/
 
 footer {
